# tailyew

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json
.github/workflows/: frontend.yaml  sam_certbot.yaml  tailyew.yaml
aws/: .gitignore  Makefile  README.md  env.example.json  samconfig.toml  template.frontend.yaml  template.infra.yaml  template.yaml
aws/certbot_lambda/: README.md  app.py
crates/tailyew/: Cargo.toml  Makefile  README.md
crates/tailyew/src/: lib.rs
crates/tailyew/src/atoms/: a.rs  button.rs  circular_progress_indicator.rs  code_block.rs  container.rs  image.rs  li.rs  linear_progress_indicator.rs  mod.rs  section.rs  spacer.rs  typo.rs  ul.rs
crates/tailyew/src/charts/: bar_chart_component.rs  bubble_chart_component.rs  line_chart_component.rs  mod.rs  pie_chart_component.rs  scatter_plot_component.rs
crates/tailyew/src/form/: checkbox.rs  color_input.rs  file_input.rs  form_container.rs  input.rs  json_input.rs  mod.rs  phone_input.rs  radio_group.rs  range_input.rs  select.rs  state_dropdown.rs  textarea.rs
crates/tailyew/src/icons/: arrow_down_icon.rs  mod.rs  x_icon.rs
crates/tailyew/src/molecules/: accordion.rs  app_bar.rs  copy_to_clipboard.rs  hero_header.rs  markdown.rs  mod.rs  modal.rs  modal_button.rs  navbar.rs  notification.rs  popover.rs  theme_toggle.rs  tooltip.rs
crates/tailyew/src/organisms/: card.rs  mod.rs  stepper.rs  table.rs  tabs.rs
crates/tailyew/src/system/: init_theme.rs  mod.rs
docs/: index.md
frontend/: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  tailwind.config.js
frontend/src/: lib.rs
frontend/src/pages/: app_router.rs  demo_page.rs  landing_page.rs  mod.rs
frontend/src/templates/: demos.rs  mod.rs  nav_bar.rs
frontend/src/templates/demos/: demo_component.rs
frontend/src/templates/demos/atoms/: a_component_demo_section.rs  a_component_usage.rs  button_demo_section.rs  button_usage.rs  circular_progress_demo_section.rs  circular_progress_usage.rs  code_block_demo_section.rs  image_demo_section.rs  li_demo_section.rs  li_usage.rs  linear_progress_demo_section.rs  linear_progress_usage.rs  mod.rs  spacer_demo_section.rs  spacer_usage.rs  typo_demo_section.rs  typo_usage.rs  ul_demo_section.rs  ul_usage.rs
frontend/src/templates/demos/charts/: bar_chart_demo_section.rs  bar_chart_usage.rs  bubble_chart_demo_section.rs  bubble_chart_usage.rs  line_chart_demo_section.rs  line_chart_usage.rs  mod.rs  pie_chart_demo_section.rs  pie_chart_usage.rs  scatter_plot_demo_section.rs  scatter_plot_usage.rs
frontend/src/templates/demos/form/: checkbox_demo_section.rs  color_input_demo_section.rs  file_input_demo_section.rs  form_demo_section.rs  input_demo_section.rs  json_input_demo_section.rs  json_input_usage.rs  mod.rs  phone_input_demo_section.rs  radio_group_demo_section.rs  range_input_demo_section.rs  select_demo_section.rs  textarea_demo_section.rs
frontend/src/templates/demos/molecules/: accordion_demo_section.rs  app_bar_demo_section.rs  app_bar_usage.rs  copy_to_clipboard_demo_section.rs  hero_header_demo_section.rs  markdown_demo.md  markdown_demo_section.rs  mod.rs  modal_button_demo_section.rs  modal_demo_section.rs  navbar_demo_section.rs  notification_demo_section.rs  popover_demo_section.rs  tooltip_demo_section.rs
frontend/src/templates/demos/organisms/: card_demo_section.rs  mod.rs  stepper_demo_section.rs  table_demo_section.rs  tabs_demo_section.rs
frontend/src/templates/demos/system/: getting_started.rs  init_theme_demo_section.rs  mod.rs
frontend/static/: index.html  manifest.json
