# Cargo.toml

[workspace]
resolver = "2"
members = [
  "frontend",
  "crates/tailyew"
  ]

[workspace.dependencies]
# Serialization and data types
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
yew = { version = "0.21", features = ["csr", "ssr"] }
gloo = "0.11.0"
web-sys = { version = "0.3.69", features = [
  "console",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlDocument",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Clipboard",
  "Navigator",     
]}

gloo-net = "0.6.0"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.72"
