# crates/tailyew/Cargo.toml

[package]
name = "tailyew"
version = "0.1.0"
edition = "2021"
description = "Reusable Yew + Tailwind UI component library"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
yew = { workspace = true }
gloo = { workspace = true }
gloo-net = { workspace = true }
yew-hooks = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-logger = { workspace = true }
url = { workspace = true }
js-sys = { workspace = true }

web-sys = { workspace = true }
