# crates/tailyew/Cargo.toml

[package]
name = "tailyew"
version = "0.1.1"
edition = "2021"
authors = ["Alex James <apjames93@gmail.com>"]
description = "Reusable Yew + Tailwind UI component library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/apjames93/tailyew"
homepage = "https://tailyew.com/"
documentation = "https://tailyew.com"
keywords = ["yew", "tailwind", "component-library", "wasm", "ui"]
categories = ["wasm", "gui", "web-programming"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
yew = { workspace = true }
gloo = { workspace = true }
gloo-net = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }

uuid = { version = "1.11.0", features = ["serde", "v4", "js"] }
regex = "1.11.1"
pulldown-cmark = "0.9"
